[gd_scene load_steps=6 format=2]

[ext_resource path="res://Artes/Esm√≥ki.png" type="Texture" id=1]
[ext_resource path="res://Scripts/VilaoComTenis.gd" type="Script" id=2]
[ext_resource path="res://Sons/sons cells journey novos/som_smoke_esmagado.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 23.2941

[sub_resource type="CircleShape2D" id=2]
radius = 22.9412

[node name="VilaoComTenis" type="KinematicBody2D"]
position = Vector2( 41, -54 )
scale = Vector2( 1.7, 1.7 )
script = ExtResource( 2 )

[node name="ImagemVilaoComTenis" type="Sprite" parent="."]
position = Vector2( 1.17646, -5.88235 )
scale = Vector2( 0.190196, 0.190196 )
texture = ExtResource( 1 )

[node name="ColisorVilaoComTenis" type="CollisionShape2D" parent="."]
position = Vector2( 2, 0 )
shape = SubResource( 1 )

[node name="AreaVilaoComTenis" type="Area2D" parent="." groups=["minion"]]

[node name="ColisorAreaVilaoComTenis" type="CollisionShape2D" parent="AreaVilaoComTenis"]
position = Vector2( 2.35294, 9.53674e-07 )
shape = SubResource( 2 )

[node name="SomMorteVilao" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="AreaVilaoComTenis" to="." method="_on_Area2D_body_entered"]
